--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "tab selector",
   "version": "1",
   "manifest_version": 2,
-  "description": "Gets information from Google.",
+  "description": "Searches tab",
   "icons": { "128": "128.png" },
   "background": {
     "persistent": false,
